Fixed search songs functionality
